--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.46",
     "expo-font": "~13.0.4",
     "expo-linking": "~7.0.5",
@@ -26,6 +25,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-css-vh-vw": "^1.0.5",
+    "react-native-expo-viewport-units": "^0.0.8",
+    "react-native-paper": "^5.13.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
